# s390x-wheel-refinery

./: .gitignore  Makefile  README.md  docker-compose.control-plane.yml  docker-compose.yml  podman-compose.yml  pyproject.toml
.devcontainer/: Containerfile  devcontainer.json
.github/workflows/: ci.yml
containers/builder/: refinery-build.sh
containers/fedora/: Dockerfile
containers/go-control-plane/: Containerfile  (+1 more)
data/: hints.yaml
docs/: artifact-cas-plan.md  automatic-build-repair-system.md  go-control-plane-api.md  go-control-plane-openapi.yaml  go-control-plane.md  go-resolver.md  go-worker.md  overview.md  plan-build-queues.md  project-status.md  ui-refactor-todo.md  user-guide.md
go-control-plane/: go.mod  go.sum
go-worker/: go.mod  go.sum
hints/: hints_01.yaml  hints_02.yaml  hints_03.yaml  hints_04.yaml  hints_05.yaml  hints_06.yaml  hints_07.yaml  hints_08.yaml  hints_09.yaml  hints_10.yaml
recipes/: README.md  _common.sh  bzip2.sh  cmake.sh  cpython310.sh  cpython311.sh  cpython312.sh  freetype.sh  jpeg.sh  libffi.sh  libpng.sh  libxml2.sh  libxslt.sh  ninja.sh  openblas.sh  openssl.sh  pkgconf.sh  rust.sh  sqlite.sh  versions.sh  xz.sh  zlib.sh  zstd.sh
scripts/: seed-build.sh
tests/: conftest.py  test_cli_only.py  test_config.py  test_container_limits.py  test_dependency_expansion.py  test_hints.py  test_history.py  test_queue.py  test_scanner_resolver.py  test_scheduler.py  test_web.py  test_web_summary.py  test_worker.py
ui/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js  vitest.setup.js
(+133 files in other folders)
