[project]
name = "s390x-wheel-refinery"
version = "0.1.0"
description = "Refine arbitrary Python wheels into s390x-compatible wheels with caching and a simple CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "s390x Wheel Refinery Maintainers" }]
dependencies = [
  "packaging>=24.0",
  "build>=1.2.1",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "jinja2>=3.1",
]
optional-dependencies = {dev = ["pytest>=8.2", "httpx>=0.27", "fastapi>=0.110", "uvicorn>=0.27", "ruff>=0.4.8"] }
[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[project.scripts]
refinery = "s390x_wheel_refinery.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
